update image names

--- a/server/compose.yaml
+++ b/server/compose.yaml
@@ -1,6 +1,6 @@
 services:
   avala-server:
-    image: avala-server
+    image: dusanlazic/avala-server
     ports:
       - "2024:2024"
     depends_on:
@@ -18,7 +18,7 @@ services:
       - ./flag_ids.py:/etc/avala/flag_ids.py:ro
 
   avala-submitter:
-    image: avala-submitter
+    image: dusanlazic/avala-submitter
     depends_on:
       rabbitmq:
         condition: service_healthy
